Project section Added

--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -17,3 +17,9 @@
   height: 100%;
   
 }
+
+.background{
+  background-image: url("../Assets/res/back.png");
+  background-position: top  bottom ;
+ object-fit: cover;
+}
